--- a/css/styles.css
+++ b/css/styles.css
@@ -74,3 +74,15 @@ main>.tagline {
 	width: 2.65rem;
 	height: 2.65rem;
 }
+
+.roboto-light {
+	font-family: "Roboto", sans-serif;
+	font-weight: 300;
+	font-style: normal;
+}
+
+.roboto-regular {
+	font-family: "Roboto", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+}
