--- a/css/themes/green-white.css
+++ b/css/themes/green-white.css
@@ -1,7 +1,7 @@
 /* Theme */
 
 main {
-	background: #43A047;
+	background: #8CC051;
 	color: #FAFAFA;
 }
 
@@ -9,6 +9,6 @@ main {
 	color: #FAFAFA;
 }
 
-.icons-social a svg path{
+.icons-social a svg path {
 	fill: #FAFAFA;
 }
